--- a/view/_parts/nav.html
+++ b/view/_parts/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a> 
+        <a class="navbar-brand" href="#">SymposiumGo</a> 
     </div>
     <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'">
         <ul ng-if="isLoggedIn" class="nav navbar-nav">
