--- a/view/home.html
+++ b/view/home.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid animated fadeInRight">
   <div class="row">
     <div class="col-xs-12 text-center">
       <h2>{{ userFullName }}</h2>
