--- a/view/profile/my-profile.html
+++ b/view/profile/my-profile.html
@@ -1,4 +1,4 @@
-<div class="contaiber-fluid">
+<div class="contaiber-fluid animated fadeInRight">
     <div class="row">
         <form name="editProfile">
             <div class="col-md-3">
