--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,6 @@ body{
   top: 0;
   bottom: 0;
   z-index: 0;
-  overflow: hidden;
   min-height: 100%;
   max-height: 100%;
   width: 275px;
@@ -114,6 +113,7 @@ body{
   display: block;
 }
 .aside-menu-content{
+  
   position: absolute;
   top: 0;
   right: 0;
@@ -122,7 +122,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: #fff;
-  overflow: hidden;
+  overflow-y: scroll!important;
   -webkit-transform: none;
   transform: none;
   z-index: 1;
@@ -179,4 +179,7 @@ body{
   background: url(./../image/matbg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+ng-cloak{
+  display: none
 }
