--- a/view/auth/login.html
+++ b/view/auth/login.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: 100px;">
+<div class="row animated fadeInRight" style="margin-top: 100px;">
   <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
     <div class="box-header">
       <span class="box-title">Login</span>
