--- a/view/error/404.html
+++ b/view/error/404.html
@@ -1,3 +1,3 @@
-<div style="padding: 100px 0px; text-align: center;">
+<div class="animated fadeInRight" style="padding: 100px 0px; text-align: center;">
     <h1>404 ! <br> Page not found !</h1>
 </div>
